# arithmos

./: .gitignore  CMakeLists.txt  README.md
libs/copperspice/: CMakeLists.txt
libs/sqlite/: CMakeLists.txt
src/: main.cc
src/tests/: CMakeLists.txt
